<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="K-Manager Settings"
        >

        <kpchuck.kklock.preferences.RootDependentSwitchPreference
            android:key="installSilently"
            android:defaultValue="false"
            android:title="@string/install_silently"/>

        <kpchuck.kklock.preferences.DialogSwitchPreference
            android:key="chooseredthemewhite"
            android:defaultValue="true"
            android:title="@string/set_dark_theme"
            app:title="App Restart"
            app:message="@string/app_restart_required"
            app:confirmButton="@string/okay"
            app:confirmButtonClickListener="kpchuck.kklock.utils.ListenerCollection.restart_app"
            app:only_checked="false"
            />

        <kpchuck.kklock.preferences.ActionPreference
            android:key="licenses"
            android:title="About and Licenses"
            app:switchListener="kpchuck.kklock.utils.ListenerCollection.about_libraries"
            />

        <kpchuck.kklock.preferences.ActionPreference
            android:key="telegram_group"
            android:title="Go to Telegram Support Group"
            app:switchListener="kpchuck.kklock.utils.ListenerCollection.open_telegram_group"/>

        <kpchuck.kklock.preferences.ActionPreference
            android:key="reportBug"
            android:title="@string/report_a_bug"
            app:switchListener="kpchuck.kklock.utils.ListenerCollection.report_bug"/>

        <kpchuck.kklock.preferences.ActionPreference
            android:key="goPro"
            android:title="@string/upgrade_to_pro"
            android:summary="@string/upgrade_to_pro_desc"
            app:switchListener="kpchuck.kklock.utils.ListenerCollection.go_pro"/>

    </PreferenceCategory>

</PreferenceScreen>