<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="General Clock"
        >

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_statusbar_clock_size"
            android:title="@string/clock_size" />

        <!-- TODO make custom pref with dialog -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_clock_hideable"
            android:title="@string/clock_hide_launcher" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_am_everywhere"
            android:title="@string/ampm_stock_clock" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_no_clock_option"
            android:title="@string/no_clock_added" />

    </PreferenceScreen>


    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Custom Clock"
        >


        <PreferenceCategory android:title="Clock Formats">

            <!-- TODO needs info dialog -->
            <SwitchPreference
                android:defaultValue="true"
                android:key="prefIncludeStockFormats"
                android:title="Include Stock Formats" />
        </PreferenceCategory>

        <PreferenceCategory android:title="Clock Colors">

            <!-- TODO needs info dialog that shows stock stuff-->
            <SwitchPreference
                android:defaultValue="true"
                android:key="prefIncludeStockColors"
                android:title="Include Stock Colors" />
        </PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="devMakeDynamicClock"
            android:title="@string/make_dynamic" />
    </PreferenceScreen>

    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Stock-Like Clock"
        >

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/clock_am_style"
            android:entryValues="@array/clock_am_style"
            android:key="clockAmStyle"
            android:title="Clock AmPm Style" />

        <!-- TODO icon color adder/shower -->
        <PreferenceCategory android:title="Clock and Icon Colors">

            <!-- TODO needs info dialog -->
            <SwitchPreference
                android:defaultValue="true"
                android:key="prefIncludeStockIconColors"
                android:title="Include Stock Icon Colors" />
        </PreferenceCategory>

    </PreferenceScreen>

    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Icon Workarounds"
        android:summary="Different ways to deal with icons on lockscreen not hiding"
        >

        <PreferenceCategory android:title="Hide Statusbar Icons">
            <!-- TODO needs to be dialog switch -->

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/pref_hide_icons_lockscreen"
                android:title="@string/hide_icons_lockscreen"
                android:summary="Hide the statusbar icons like SystemUI tuner would everytime the lockscreen is on."/>

            <SwitchPreference
                android:defaultValue="false"
                android:key="hideStatusBarIconsOnLockscreenButNotFully"
                android:title="@string/leave_wifi_networks"
                />
        </PreferenceCategory>

        <SwitchPreference
            android:defaultValue="false"
            android:key="hideStatusBarPref"
            android:title="@string/lockscreen_statusbar_size"
            android:summary="You can make the lockscreen the same size as the normal statusbar - aligns carrier text and stuff.\nYou can make the size 0 - hides everything so nothing will overlap with the normal statusbar."/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="blackoutTheLockscreenStatusbar"
            android:title="@string/blackout_lockscreen"
            android:summary="Leaves you with just a black bar at the top of the lockscreen. Very effective for hiding everything, particularly if your lockscreen wallpaper is black at the top."/>

    </PreferenceScreen>

    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/statusbar"
        >

        <!-- Add Custom Icon
              Change Statusbar color
              Network Icons left
              Notifications right
              Custom Text -->
        <!-- TODO image picker for custom icon -->

        <!-- TODO list selection where if Other is selected an colorpicker shows up under -->
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/statusbar_bg_colors"
            android:entryValues="@array/statusbar_bg_colors"
            android:key="newStatBarColor"
            android:title="@string/change_statusbar_bg" />

        <!-- TODO color picker dependent on key and value above using same key -->
        <Preference
            android:key="newStatBarColors"
            android:title="Custom Statusbar Background Color"
            android:dependency="newStatBarColor"/>

        <!-- TODO menu/list picker with left, right, center values -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="moveLeftPref"
            android:title="@string/network_icons_left" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="moveNotificationsRightPref"
            android:title="@string/notification_icons_right" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="hideNotificationIconsEverywhere"
            android:title="@string/hide_notifications"/>

        <PreferenceCategory android:title="Custom Text">

            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_carrier_text_enable"
                android:title="@string/text_on_statusbar" />

            <SwitchPreference
                android:defaultValue="false"
                android:key="customCarrierTextPref"
                android:title="@string/text_on_lockscreen"
                android:dependency="@string/key_carrier_text_enable"/>

            <EditTextPreference
                android:defaultValue="@string/enter_text_hint"
                android:key="inputtedCarrierText"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                android:dependency="@string/key_carrier_text_enable"/>
        </PreferenceCategory>


    </PreferenceScreen>


    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Quick Settings"
        >

        <!-- TODO maybe slider for this too -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="qsPref"
            android:title="@string/qs_tile_no" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="qsTitlePref"
            android:title="@string/qs_tile_text" />

        <!-- TODO image picker-->
        <SwitchPreference
            android:defaultValue="false"
            android:key="qsBgPref"
            android:title="@string/qs_background"
            android:summary="This doesn't work with OxygenOS on Oneplus devices"/>

        <PreferenceCategory android:title="Qs Header">

            <!-- TODO image picker -->
            <SwitchPreference
                android:defaultValue="false"
                android:key="@string/key_qs_header_switch"
                android:title="@string/qs_header" />
            <SwitchPreference
                android:defaultValue="false"
                android:key="alternate_qs_header"
                android:summary="@string/alt_qs_header_desc"
                android:title="@string/alt_qs_header"
                android:dependency="@string/key_qs_header_switch"
                />

            <SwitchPreference
                android:defaultValue="false"
                android:key="opaque_qs_header"
                android:title="@string/opaque_qs_header"
                android:dependency="@string/key_qs_header_switch"

                />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Lockscreen"
        >

        <SwitchPreference
            android:defaultValue="false"
            android:key="prefhidelockscreenclock"
            android:title="@string/hide_lockscreen_clock" />

        <PreferenceCategory android:title="Preference category"
            android:dependency="prefhidelockscreenclock"
            >
            <!-- TODO create custom format picker with help dialog or something-->

            <SwitchPreference
                android:defaultValue="false"
                android:key="changeLockClockMod"
                android:title="Change Lockscreen Clock Format" />

            <EditTextPreference
                android:dependency="changeLockClockMod"
                android:defaultValue="Lockscreen Format"
                android:key="lockClockFormat"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                 />
            <SwitchPreference
                android:defaultValue="false"
                android:key="changeLockDateMod"
                android:title="Change Lockscreen Date Format" />

            <EditTextPreference
                android:dependency="changeLockDateMod"
                android:defaultValue="Lockscreen Format"
                android:key="lockDateFormat"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                />

            <ListPreference
                android:defaultValue="1"
                android:entries="@array/font_names"
                android:entryValues="@array/font_names"
                android:key="lockFont"
                android:title="Lockscreen Clock Font" />

            <!-- TODO color picker -->
            <SwitchPreference
                android:defaultValue="false"
                android:key="lockClockColor"
                android:title="Lockscreen Clock Color" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="Miscellaneous"
        >

        <!-- TODO maybe add slider here -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="prefHeadsUpTimeout"
            android:title="@string/heads_up_timeout" />
        <!-- TODO warning dialog -->
        <SwitchPreference
            android:defaultValue="false"
            android:key="minitPref"
            android:title="@string/minit_compatibility" />
    </PreferenceScreen>

    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="K-Manager Settings"
        >

        <SwitchPreference
            android:key="installSilently"
            android:defaultValue="false"
            android:title="@string/install_silently"/>

        <!-- TODO all these probably need intents -->
        <Preference
            android:key="keyCheckUpdates"
            android:title="Check for Updates"/>
        <Preference
            android:key="licenses"
            android:title="About and Licenses"/>

        <Preference
            android:key="goPro"
            android:title="@string/upgrade_to_pro"
            android:summary="@string/upgrade_to_pro_desc"/>

        <Preference
            android:key="reportBug"
            android:title="@string/report_a_bug"/>

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/contact_ways"
            android:entryValues="@array/contact_ways"
            android:key="list_preference_1"
            android:title="List preference" />


    </PreferenceScreen>

</PreferenceScreen>