<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kpchuck.kklock.fragments.MiscFragment"
    android:id="@+id/miscAddOnFragmentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="75dp">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/miscAddOnHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:text="@string/misc_addon"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <Switch
            android:id="@+id/noQsTilesTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/qs_tile_no"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/qs_tile_text"
            android:id="@+id/qsTitle"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/rounded_recents"
            android:id="@+id/roundedRecents"/>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/qs_background"
            android:id="@+id/qsBg"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/qs_header"
            android:id="@+id/qsHeader"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/heads_up_timeout"
            android:id="@+id/headsUpTimout"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/hide_lockscreen_clock"
            android:id="@+id/lockscreenClock"/>
        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/minit_compatibility"
            android:layout_marginBottom="12dp"
            android:id="@+id/minitMod"/>


    </LinearLayout>

    </androidx.cardview.widget.CardView>

    </ScrollView>
</LinearLayout>